--- a/ios/CoachApp/Info.plist
+++ b/ios/CoachApp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMotionUsageDescription</key>
+	<string>Allow us read your motion data</string>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>Allow us write your data</string>
 	<key>NSHealthShareUsageDescription</key>
