--- a/ios/CoachApp/Info.plist
+++ b/ios/CoachApp/Info.plist
@@ -59,5 +59,10 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>MaterialIcons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+	</array>
 </dict>
 </plist>
