--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-decorators": "^7.1.6",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/runtime": "^7.1.5",
+    "mobx": "^5.6.0",
+    "mobx-react": "^5.3.6",
     "moment": "^2.22.2",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
