--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native": "0.57.4",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.2",
-    "react-timer-mixin": "^0.13.4"
+    "react-redux": "^5.1.1",
+    "react-timer-mixin": "^0.13.4",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
